--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/components/images/Logo-rv.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trabajo gratis</title>
+    <title>Practicas Free</title>
   </head>
   <body>
     <div id="root"></div>
